# so_pandas_util

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/so_pandas_util/: __init__.py  conditional_exp_evaluator.py
tests/: test_contional_exp_evaluator.py
