[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "so_pandas_util"
version = "0.0.2"
authors = [
    { name = "UNO Leo", email = "leouno12@gmail.com" },
]
description = "Utility tools for Pandas"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aitit-inc/so_pandas_util"
"Bug Tracker" = "https://github.com/aitit-inc/so_pandas_util/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
